Fixed spacing in skills

--- a/src/sections/Skills.scss
+++ b/src/sections/Skills.scss
@@ -1,6 +1,6 @@
 .skills {
     max-width: 68.75rem;
-    height: 80vh;
+    height: 100%;
     margin: auto;
     text-align: center;
 }
